# af-confluence-rag

./: .env.example  README.md  SCRIPT_UPDATES.md  main.py  pyproject.toml  requirements.txt
.kiro/steering/: product.md  structure.md  tech.md
chroma_db/: chroma.sqlite3
config/: default.yaml  development.yaml  production.yaml
docs/: API.md  POSIT_CONNECT_DEPLOYMENT.md  PROVIDER_SWAPPING.md  STREAMLIT_APP.md  TROUBLESHOOTING.md
scripts/: README.md  health_check.py  ingest.py  run_app.py  scheduled_sync.py  setup_deployment.py  test_config_loader.py  verify_setup.py
src/: __init__.py  providers.py
src/ingestion/: __init__.py  confluence_client.py  ingestion_service.py
src/models/: __init__.py  config.py  page.py
src/processing/: __init__.py  chunker.py  embedder.py  metadata_enricher.py
src/query/: __init__.py  app.py  query_processor.py  result_formatter.py
src/storage/: __init__.py  vector_store.py
src/sync/: models.py  (+4 more)
tests/: __init__.py  test_chunker_basic.py  test_chunker_properties.py  test_config_properties.py  test_config_provider_integration_properties.py  test_confluence_client_properties.py  test_deployment_properties.py  test_document_mapping_properties.py  test_documentation_properties.py  test_embedder_properties.py  test_ingestion_langchain_properties.py  test_ingestion_properties.py  test_logging_properties.py  test_metadata_enricher.py  test_metadata_enricher_properties.py  test_model_compatibility_properties.py  test_models_properties.py  test_provider_properties.py  test_query_processor_properties.py  test_result_formatter_properties.py  test_retry_properties.py  test_sync_properties.py  test_vector_store_properties.py
(+10 files in other folders)
