[project]
name = "af-confluence-rag"
version = "0.1.0"
description = "Confluence Documentation RAG System - Semantic search over Confluence documentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=3.41.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.0.1",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "streamlit>=1.30.0",
    "sentence-transformers>=2.3.0",
    "chromadb>=0.4.22",
    "numpy>=1.26.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "structlog>=25.5.0",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "hypothesis>=6.148.5",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
